--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Livio"
   },
   "bugs": {
-    "url": "https://github.com/renonick87/Rich-Error/issues"
+    "url": "https://github.com/renonick87/REMIE/issues"
   },
   "contributors": [
     {
@@ -16,19 +16,17 @@
     }
   ],
   "dependencies": {
-    "i18next": "^3.4.1"
+    "i18next": "^3.4.1",
+    "events": "1.1.1",
+    "util": "0.10.3"
   },
-  "description": "R.E.M.I.E. Rich Error Module Is Everything",
+  "description": "copy of Rich Error Module for egghead lessons",
   "devDependencies": {
     "chai": "^3.5.0",
     "codecov.io": "^0.1.6",
-    "commitizen": "^2.8.6",
-    "cz-conventional-changelog": "^1.2.0",
-    "ghooks": "^1.3.2",
+    "events": "^1.1.1",
     "istanbul": "^0.3.22",
     "mocha": "^2.5.3",
-    "semantic-release": "^4.3.5",
-    "semantic-release-cli": "^1.4.1",
     "should": "^7.1.0",
     "travis-ci": "^2.1.0"
   },
@@ -43,6 +41,7 @@
     "MICRO",
     "MICROSERVICE",
     "RICH",
+    "RESPONSE",
     "RICHERRORMODULE",
     "SERVER",
     "SERVICE"
@@ -50,7 +49,7 @@
   "licenses": [
     {
       "type": "BSD-3-Clause",
-      "url": "https://github.com/renonick87/Rich-Error/blob/master/license"
+      "url": "https://github.com/renonick87/REMIE/blob/master/license"
     }
   ],
   "main": "./libs",
@@ -58,21 +57,12 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/renonick87/Rich-Error"
+    "url": "https://github.com/renonick87/REMIE"
   },
   "scripts": {
     "commit": "git-cz",
-    "test": "mocha test/index.test.js -w",
-    "test:single": "istanbul cover -x * .test.js _mocha -- -R spec test/index.test.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "test": "mocha test/index.test.js",
+    "test:single": "istanbul cover -x * .test.js _mocha -- -R spec test/index.test.js"
   },
-  "config": {
-    "ghooks": {
-      "pre-commit": "npm run test"
-    }
-  },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
-  },
-  "version": "0.0.2"
+  "version": "0.0.1"
 }
