--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "events": "1.1.1",
     "util": "0.10.3"
   },
-  "description": "copy of Rich Error Module for egghead lessons",
+  "description": "Rich Error Module",
   "devDependencies": {
     "chai": "^3.5.0",
     "codecov.io": "^0.1.6",
@@ -64,5 +64,5 @@
     "test": "mocha test/index.test.js",
     "test:watch": "mocha test/index.test.js -w"
   },
-  "version": "0.0.4"
+  "version": "0.0.5"
 }
