added badges and code coverage checking

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_script:
   - npm prune
 script:
   - npm run test
+after_success:
+  - npm run report-coverage
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
