--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "url": "https://github.com/livio/remie"
   },
   "scripts": {
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "test": "istanbul cover -x *.test.js _mocha -- -R spec test/index.test.js"
   },
   "version": "0.0.9"
