--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "codecov.io": "^0.1.6",
+    "expect": "^1.20.2",
     "events": "^1.1.1",
     "istanbul": "^0.3.22",
     "mocha": "^2.5.3",
