--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "description": "Rich Error Module",
   "devDependencies": {
+    "async": "^2.0.1",
     "chai": "^3.5.0",
     "codecov.io": "^0.1.6",
     "expect": "^1.20.2",
@@ -61,7 +62,7 @@
   },
   "scripts": {
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "test": "istanbul cover -x *.test.js _mocha -- -R spec test/index.test.js"
+    "test": "istanbul cover -x *.test.js _mocha -- -R spec test/index.js"
   },
   "version": "0.0.10"
 }
