--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: required
+sudo: false
 language: node_js
 cache:
   directories:
@@ -12,7 +12,7 @@ before_install:
 before_script:
   - npm prune
 script:
-  - npm run test
+  - npm run-script test-travis
 after_success:
   - npm run report-coverage
 branches:
